fixing dancing scrollbar issues (esp. prevalent in IE9) by getting rid of scrolling altogether.
git-svn-id: https://pixellab.springloops.com/source/eightball/trunk@328 efd6ee18-2b61-4776-8ca0-166b4ef03a6b

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -10,6 +10,7 @@ html {
 body {
     height: 100%;
     text-align: center;
+    overflow:hidden;
 }
 
 #vignette {
